Mobile version has been added

--- a/src/index.html
+++ b/src/index.html
@@ -194,11 +194,11 @@
       <div class="main__experience">
         <div class="skill__inner">
           <h2 class="section-title main__section-title">Опыт работы</h2>
-
+          <br>
           <span class="text">Опыта работы нет. Примерно 3 месяца занимался разработкой <a target="_blank"
               href="https://accentuations-lychko.site">психологического опросника</a> на <span
               class="text_fw_bold">HTML5/CSS3, jQuery</span> и <span class="text_fw_bold">PHP</span> и 6 месяцев
-            разработкой <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app">учебнго проекта</a> на
+            разработкой <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app">учебного проекта</a> на
             <span class="text_fw_bold">React.js, Redux, Node.js</span> и <span
               class="text_fw_bold">MongoDB</span></span>
         </div>
