--- a/src/index.html
+++ b/src/index.html
@@ -149,8 +149,7 @@
 
           <span class="text text_mt_12">Психологический опросник для диагностики характера и сопряженных с ним
             личностных
-            особенностей подростков и юношей в возрасте 14-20 лет. Реализовал структуру данных “Двусвязный список” для
-            более удобной работы с кодом. Один из первых проектов, который я зкончил почти год назад.</span>
+            особенностей подростков и юношей в возрасте 14-20 лет. Использовал <span class="text_fw_bold">HTML, SASS, jQuery, Webpack</span> и структуру данных “Двусвязный список”. Один из первых проектов, который я зкончил почти год назад.</span>
 
           <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://accentuations-lychko.site"
               class="projects__link">https://accentuations-lychko.site</a></span>
