main__projects style edited for mobile. Mistypings corrected

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,11 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
+                <span class="text_fw_bold">TypeScript</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
                 <span class="text_fw_bold">HTML5/CSS3</span> - flex-box, bootstrap, BEM;
               </span>
             </li>
@@ -78,12 +83,7 @@
           </ul>
 
           <ul class="skills__ul">
-            <span class="text">Знаю поверхостно/редко исопльзовал:</span>
-            <li class="skills__list-item">
-              <span class="text">
-                <span class="text_fw_bold">TypeScript</span>;
-              </span>
-            </li>
+            <span class="text">Знаю поверхостно/редко использовал:</span>
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">Git</span>;
@@ -194,7 +194,7 @@
         <div class="skill__inner">
           <h2 class="section-title main__section-title">Опыт работы</h2>
           <br>
-          <span class="text">Опыта работы нет. Примерно 3 месяца занимался разработкой <a target="_blank"
+          <span class="text">Примерно 3 месяца занимался разработкой <a target="_blank"
               href="https://accentuations-lychko.site">психологического опросника</a> на <span
               class="text_fw_bold">HTML5/CSS3, jQuery</span> и <span class="text_fw_bold">PHP</span> и 6 месяцев
             разработкой <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app">учебного проекта</a> на
