E-commerce project has been added to projects.

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,23 @@
         </div>
 
         <div class="projects__project-wrapper">
+          <h3 id="trello-like" class="projects__title">E-commerce</h3>
+          <span class="projects__title-explanation"> - интернет магазин.</span>
+
+          <span class="text text_mt_12">Учебный проект, в котором я изучал  
+            <span class="text_fw_bold">TypeScript</span> и пробовал его использовать с <span
+              class="text_fw_bold">React/Redux</span>. Стилизацию делал по <span class="text_fw_bold">BEM</span>. Небольшой интернет-магазин мобильных телефонов. Можно установить фильтр по товарам, есть простая валидация формы.
+            Для функционирования формы использовал стороннюю библиотеку <span class="text_fw_bold">react-hook-form</span>.</span>
+
+          <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://sv1nnet.github.io/e-commerce--react--typescript/"
+              class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>  
+
+          <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/e-commerce--react--typescript"
+              class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
+
+        </div>
+
+        <div class="projects__project-wrapper">
           <h3 class="projects__title">Тест личностных акцентуаций</h3>
           <span class="projects__title-explanation"> – психологический опросник.</span>
 
