--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           </ul>
 
           <ul class="skills__ul">
-            <span class="text">Знаю поверхостно/редко использовал:</span>
+            <span class="text">Знаю поверхностно/редко использовал:</span>
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">Git</span>;
