--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,11 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
+                <span class="text_fw_bold">Jest, Mocha, Chai, React Testing Library</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
                 <span class="text_fw_bold">Figma, Photoshop</span>
               </span>
             </li>
@@ -92,6 +97,11 @@
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">Webpack, Gulp</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                <span class="text_fw_bold">MySQL</span>;
               </span>
             </li>
             <li class="skills__list-item">
