Updated job position: 'not looking for a job'

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header class="header body__header">
       <div class="header__author">
         <h1 class="header__full-name">Леонид Цуканов</h1>
-        <p class="text_ff_open-sans header__profession">Front-End Developer</p>
+        <p class="text_ff_open-sans header__profession">Front-End Developer (не ищу работу)</p>
         <a target="_blank" href="https://github.com/Sv1nnet" class="contact-link">https://github.com/Sv1nnet</a>
       </div>
 
