--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header class="header body__header">
       <div class="header__author">
         <h1 class="header__full-name">Леонид Цуканов</h1>
-        <p class="text_ff_open-sans header__profession">Front-End Developer (не ищу работу)</p>
+        <p class="text_ff_open-sans header__profession">Front-End Developer (Junior+ / Junior-to-Middle)</p>
         <a target="_blank" href="https://github.com/Sv1nnet" class="contact-link">https://github.com/Sv1nnet</a>
       </div>
 
@@ -24,6 +24,7 @@
         <p class="text contacts__text">Telegram, WhatsApp:</p>
         <p class="text contacts__text contacts__phone">+7 (925) 180-41-85</p>
         <p class="text contacts__text">Skype: <span class="text_fw_bold">svinnet</span></p>
+        <a href="https://www.linkedin.com/in/leonid-tsukanov-168805178" class="contact-link">LinkedIn</a>
         <a href="mailto:Leonid.Tsukanov.work@gmail.com" class="contact-link">Leonid.Tsukanov.work@gmail.com</a>
       </div>
     </header>
@@ -37,7 +38,7 @@
             <span class="text">Активно использовал:</span>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">JavaScript</span> - ES5, ES6, ES7, Promise, async/await, jQuery, Axios;
+                <span class="text_fw_bold">JavaScript</span> - es5-es11, Promise, async/await, jQuery, Axios;
               </span>
             </li>
             <li class="skills__list-item">
@@ -47,12 +48,32 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">HTML5/CSS3</span> - flex-box, bootstrap, BEM;
+                <span class="text_fw_bold">HTML5/CSS3</span> - flex-box, BEM;
               </span>
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">React.js, React hooks, Redux</span>;
+                <span class="text_fw_bold">SASS, SCSS</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                <span class="text_fw_bold">StyledComponents</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                <span class="text_fw_bold">React.js</span> - React hooks, Redux/Redux toolkit, Reselect, NextJS;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                <span class="text_fw_bold">Jest, Enzyme</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                <span class="text_fw_bold">Storybook</span>;
               </span>
             </li>
             <li class="skills__list-item">
@@ -63,16 +84,6 @@
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">MongoDB, mongoose</span>;
-              </span>
-            </li>
-            <li class="skills__list-item">
-              <span class="text">
-                <span class="text_fw_bold">SASS, SCSS</span>;
-              </span>
-            </li>
-            <li class="skills__list-item">
-              <span class="text">
-                <span class="text_fw_bold">Jest, Mocha, Chai, React Testing Library</span>;
               </span>
             </li>
             <li class="skills__list-item">
@@ -111,7 +122,7 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">Materialize</span>;
+                <span class="text_fw_bold">CSS Grid Layout</span>;
               </span>
             </li>
           </ul>
@@ -129,105 +140,146 @@
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">Английский</span> на уровне чтения документации, просмотра выступлений с
-                конференций, видео-уроков;
+                конференций, видео-уроков; разговорный - pre-intermediate;
               </span>
             </li>
           </ul>
         </div>
       </div>
-
-      <div class="projects main__projects">
-        <h2 class="section-title main__section-title">Проекты</h2>
-
-        <div class="projects__project-wrapper">
-          <h3 id="trello-like" class="projects__title">Trello-like</h3>
-          <span class="projects__title-explanation"> - канбан доска.</span>
-
-          <span class="text text_mt_12">Веб-приложение, которое повторяет большую часть функционала Trello. Написано на
-            <span class="text_fw_bold">ReactJS, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Реализовал <span
-              class="text_fw_bold">Drag and Drop</span> функциональность без сторонних библиотек и HTML Drag and Drop
-            API.</span>
-
-          <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
-              class="projects__link">https://github.com/Sv1nnet/trello-react-app</a></span>
-
-        </div>
-
-        <div class="projects__project-wrapper">
-          <h3 id="trello-like" class="projects__title">E-commerce</h3>
-          <span class="projects__title-explanation"> - интернет магазин.</span>
-
-          <span class="text text_mt_12">Учебный проект, в котором я изучал  
-            <span class="text_fw_bold">TypeScript</span> и пробовал его использовать с <span
-              class="text_fw_bold">React/Redux</span>. Стилизацию делал по <span class="text_fw_bold">BEM</span>. Небольшой интернет-магазин мобильных телефонов. Можно установить фильтр по товарам, есть простая валидация формы.
-            Для функционирования формы использовал стороннюю библиотеку <span class="text_fw_bold">react-hook-form</span>.</span>
-
-          <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://sv1nnet.github.io/e-commerce--react--typescript/"
-              class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>  
-
-          <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/e-commerce--react--typescript"
-              class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
-
-        </div>
-
-        <div class="projects__project-wrapper">
-          <h3 class="projects__title">Тест личностных акцентуаций</h3>
-          <span class="projects__title-explanation"> – психологический опросник.</span>
-
-          <span class="text text_mt_12">Психологический опросник для диагностики характера и сопряженных с ним
-            личностных
-            особенностей подростков и юношей в возрасте 14-20 лет. Использовал <span class="text_fw_bold">HTML, SASS, jQuery, Webpack</span> и структуру данных “Двусвязный список”. Один из первых проектов, который я зкончил почти год назад.</span>
-
-          <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://accentuations-lychko.site"
-              class="projects__link">https://accentuations-lychko.site</a></span>
-
-          <span class="text text_mt_12">GitHub - <a target="_blank"
-              href="https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko"
-              class="projects__link">https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko</a></span>
-        </div>
-
-        <div class="projects__project-wrapper">
-          <h3 class="projects__title">Landings</h3>
-          <span class="projects__title-explanation"> – сверстанные лендинги.</span>
-
-          <span class="text text_mt_12">Сделаны для демонстрации моих <span class="text_fw_bold">HTML/CSS</span>
-            навыков. Использовал <span class="text_fw_bold">Webpack, BEM naming</span>
-            и
-            <span class="text_fw_bold">jQuery</span>.</span>
-
-          <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/html-css-layouts"
-              class="projects__link">https://github.com/Sv1nnet/html-css-layouts</a></span>
-        </div>
-
-        <div class="projects__project-wrapper">
-          <h3 class="projects__title">Ninja React/Firebase tutorial project</h3>
-          <span class="projects__title-explanation"> – мигрированный учебный проект.</span>
-
-          <span class="text text_mt_12">Перевел учебный проект от Net Ninja на новую версию Redux и Firebase. На момент
-            мигрирования
-            многие ученики сталкивались с проблемой несовместимости свежих версий Firebase и Redux, и я решил
-            мигрировать
-            проект на их свежие версии и оставить людям ссылку на проект, в случае если они захотят использовать именно
-            свежие версии инструментов. Особой трудностью в этом была очень сырая документация по Firebase.
+      <div class="work main__experience">
+        <h2 class="section-title main__section-title">Опыт работы</h2>
+        <br>
+        <span class="text"><span class="text_fw_bold">авг</span> 2020 - ...</span>
+        <span class="text text_fw_bold">ООО "Интермобилити"</span>
+        <span class="text">Младший фронтэнд разработчик</span>
+        <br>
+        <span class="text text_fw_bold">Проекты</span>
+        <div class="work__projects">
+          <span class="text">
+            Платформа (SPA) для формирования рассылок для москвичей:
           </span>
+          <ul class="work__projects-ul">
+            <li class="skills__list-item">
+              <span class="text">разработка форм, страниц, элементов UI (инпуты, кнопки и т.д.);</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                рефакторинг компонентов и их тестирование при помощи <span class="text_fw_bold">Enzyme</span> и <span
+                  class="text_fw_bold">Jest</span> -
+                переписал большое количество легаси на <span class="text_fw_bold">React</span>'e с UNSAFE методами на
+                функциональные компоненты с предварительным написанием тестов;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                исправление багов;
+              </span>
+            </li>
+          </ul>
 
-          <span class="text text_mt_12">GitHub - <a target="_blank"
-              href="https://github.com/Sv1nnet/mario-plan-migrated-on-redux601-and-firebase300-alpha"
-              class="projects__link">https://github.com/Sv1nnet/mario-plan-migrated-on-redux601-and-firebase300-alpha</a></span>
+          <span class="text">
+            Доработка продукта (пока он не в продакшене, не могу рассказать подробнее) на <span
+              class="text_fw_bold">NextJS</span> и <span class="text_fw_bold">Styled-Components</span>:
+          </span>
+          <ul class="work__projects-ul">
+            <li class="skills__list-item">
+              <span class="text">доработка компонентов: кнопки, инпуты и т.д.;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">исправление багов;</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="projects main__projects">
+          <h2 class="section-title main__section-title">Пет проекты</h2>
+  
+          <div class="projects__project-wrapper">
+            <h3 id="trello-like" class="projects__title">Trello-like</h3>
+            <span class="projects__title-explanation"> - канбан доска.</span>
+  
+            <span class="text text_mt_12">Веб-приложение, которое повторяет большую часть функционала Trello. Написано на
+              <span class="text_fw_bold">ReactJS, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Реализовал <span
+                class="text_fw_bold">Drag and Drop</span> функциональность без сторонних библиотек и HTML Drag and Drop
+              API.</span>
+  
+            <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
+                class="projects__link">https://github.com/Sv1nnet/trello-react-app</a></span>
+  
+          </div>
+  
+          <div class="projects__project-wrapper">
+            <h3 id="trello-like" class="projects__title">E-commerce</h3>
+            <span class="projects__title-explanation"> - интернет магазин.</span>
+  
+            <span class="text text_mt_12">Учебный проект, в котором я изучал
+              <span class="text_fw_bold">TypeScript</span> и пробовал его использовать с <span
+                class="text_fw_bold">React/Redux</span>. Стилизацию делал по <span class="text_fw_bold">BEM</span>.
+              Небольшой интернет-магазин мобильных телефонов. Можно установить фильтр по товарам, есть простая валидация
+              формы.
+              Для функционирования формы использовал стороннюю библиотеку <span
+                class="text_fw_bold">react-hook-form</span>.</span>
+  
+            <span class="text text_mt_12">Ссылка - <a target="_blank"
+                href="https://sv1nnet.github.io/e-commerce--react--typescript/"
+                class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>
+  
+            <span class="text text_mt_12">GitHub - <a target="_blank"
+                href="https://github.com/Sv1nnet/e-commerce--react--typescript"
+                class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
+  
+          </div>
+  
+          <div class="projects__project-wrapper">
+            <h3 class="projects__title">Тест личностных акцентуаций</h3>
+            <span class="projects__title-explanation"> – психологический опросник.</span>
+  
+            <span class="text text_mt_12">Психологический опросник для диагностики характера и сопряженных с ним
+              личностных
+              особенностей подростков и юношей в возрасте 14-20 лет. Использовал <span class="text_fw_bold">HTML, SASS,
+                jQuery, Webpack</span> и структуру данных “Двусвязный список”.</span>
+  
+            <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://accentuations-lychko.site"
+                class="projects__link">https://accentuations-lychko.site</a></span>
+  
+            <span class="text text_mt_12">GitHub - <a target="_blank"
+                href="https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko"
+                class="projects__link">https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko</a></span>
+          </div>
+  
+          <div class="projects__project-wrapper">
+            <h3 class="projects__title">Landings</h3>
+            <span class="projects__title-explanation"> – сверстанные лендинги.</span>
+  
+            <span class="text text_mt_12">Сделаны для демонстрации моих <span class="text_fw_bold">HTML/CSS</span>
+              навыков. Использовал <span class="text_fw_bold">Webpack, BEM naming</span>
+              и
+              <span class="text_fw_bold">jQuery</span>.</span>
+  
+            <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/html-css-layouts"
+                class="projects__link">https://github.com/Sv1nnet/html-css-layouts</a></span>
+          </div>
+  
+          <div hidden class="projects__project-wrapper">
+            <h3 class="projects__title">Ninja React/Firebase tutorial project</h3>
+            <span class="projects__title-explanation"> – мигрированный учебный проект.</span>
+  
+            <span class="text text_mt_12">Перевел учебный проект от Net Ninja на новую версию Redux и Firebase. На момент
+              мигрирования
+              многие ученики сталкивались с проблемой несовместимости свежих версий Firebase и Redux, и я решил
+              мигрировать
+              проект на их свежие версии и оставить людям ссылку на проект, в случае если они захотят использовать именно
+              свежие версии инструментов. Особой трудностью в этом была очень сырая документация по Firebase.
+            </span>
+  
+            <span class="text text_mt_12">GitHub - <a target="_blank"
+                href="https://github.com/Sv1nnet/mario-plan-migrated-on-redux601-and-firebase300-alpha"
+                class="projects__link">https://github.com/Sv1nnet/mario-plan-migrated-on-redux601-and-firebase300-alpha</a></span>
+          </div>
         </div>
       </div>
 
-      <div class="main__experience">
-        <div class="skill__inner">
-          <h2 class="section-title main__section-title">Опыт работы</h2>
-          <br>
-          <span class="text">Занимался разработкой <a target="_blank"
-              href="https://accentuations-lychko.site">психологического опросника</a> на <span
-              class="text_fw_bold">HTML5/CSS3, jQuery, PHP</span> и <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app">учебного проекта</a> на
-            <span class="text_fw_bold">React.js, Redux, Node.js</span> и <span
-              class="text_fw_bold">MongoDB</span></span>
-        </div>
-      </div>
+      
     </main>
   </div>
 </body>
