--- a/src/index.html
+++ b/src/index.html
@@ -156,11 +156,17 @@
         <span class="text text_fw_bold">Проекты</span>
         <div class="work__projects">
           <span class="text">
-            Платформа (SPA) для формирования рассылок для москвичей:
+            Платформа (SPA) для формирования рассылок:
           </span>
           <ul class="work__projects-ul">
             <li class="skills__list-item">
-              <span class="text">разработка форм, страниц, элементов UI (инпуты, кнопки и т.д.);</span>
+              <span class="text">разработка графика на <span class="text_fw_bold">D3.js</span>;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">интеграция сторонних сервисов с использованием <span class="text_fw_bold">iframe</span>;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">разработка форм, разделов приложения, элементов UI (инпуты, кнопки и т.д.);</span>
             </li>
             <li class="skills__list-item">
               <span class="text">
@@ -175,15 +181,24 @@
                 исправление багов;
               </span>
             </li>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
+                работа в паре с бэкэндерами;
+              </span>
+            </li>
           </ul>
 
           <span class="text">
-            Доработка продукта (пока он не в продакшене, не могу рассказать подробнее) на <span
-              class="text_fw_bold">NextJS</span> и <span class="text_fw_bold">Styled-Components</span>:
+            Доработка продукта (пока не в продакшене, не могу рассказать подробнее) на <span
+              class="text_fw_bold">NextJS</span>, <span class="text_fw_bold">CSS Modules</span> и <span class="text_fw_bold">Styled-Components</span>:
           </span>
           <ul class="work__projects-ul">
             <li class="skills__list-item">
               <span class="text">доработка компонентов: кнопки, инпуты и т.д.;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">участие в улучшении дизайна;</span>
             </li>
             <li class="skills__list-item">
               <span class="text">исправление багов;</span>
