--- a/src/ru.html
+++ b/src/ru.html
@@ -14,23 +14,23 @@
   <div class="body__inner">
     <nav class="nav body__nav">
       <ul class="nav__ul">
-        <li class="nav__list-item"><span class="text">Eng</span></li>
+        <li class="nav__list-item"><a href="/"><span class="text">Eng</span></a></li>
         <li class="nav__list-item">
           <div class="nav__list-item-divider"></div>
         </li>
-        <li class="nav__list-item"><a href="/ru.html"><span class="text">Ru</span></a></li>
+        <li class="nav__list-item"><span class="text">Ru</span></li>
       </ul>
     </nav>
 
     <header class="header body__header">
       <div class="header__author">
-        <h1 class="header__full-name">Leonid Tsukanov</h1>
+        <h1 class="header__full-name">Леонид Цуканов</h1>
         <p class="text_ff_open-sans header__profession">Front-End Developer (Junior+ / Junior-to-Middle)</p>
         <a target="_blank" href="https://github.com/Sv1nnet" class="contact-link">https://github.com/Sv1nnet</a>
       </div>
 
       <div class="header__contacts">
-        <p class="text contacts__text">Russia, Moscow.</p>
+        <p class="text contacts__text">Россия, Москва.</p>
         <p class="text contacts__text">Telegram, WhatsApp:</p>
         <p class="text contacts__text contacts__phone">+7 (925) 180-41-85</p>
         <p class="text contacts__text">Skype: <span class="text_fw_bold">svinnet</span></p>
@@ -42,10 +42,10 @@
     <main class="main">
       <div class="skills main__skills">
         <div class="skill__inner">
-          <h2 class="section-title main__section-title">Skills</h2>
+          <h2 class="section-title main__section-title">Навыки</h2>
 
           <ul class="skills__ul">
-            <span class="text">Actively used:</span>
+            <span class="text">Активно использовал:</span>
             <li class="skills__list-item">
               <span class="text">
                 <span class="text_fw_bold">JavaScript</span> - es5-es11, Promise, async/await;
@@ -109,10 +109,10 @@
           </ul>
 
           <ul class="skills__ul">
-            <span class="text">Know poorly/rarely used:</span>
+            <span class="text">Знаю поверхностно/редко использовал:</span>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">Git</span> - usually, I use "checkout", "commit", "add" and other commonly used commands;
+                <span class="text_fw_bold">Git</span> - чаще всего использовал "checkout", "commit", "add" и другие часто используемые команды;
               </span>
             </li>
             <li class="skills__list-item">
@@ -139,103 +139,104 @@
         </div>
 
         <div class="skill__inner">
-          <h2 class="section-title main__section-title">Languages</h2>
+          <h2 class="section-title main__section-title">Языки</h2>
 
           <ul class="skills__ul">
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">Russian</span> - native;
+                <span class="text_fw_bold">Русский</span>;
               </span>
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">English</span> - can read/write documentaion, watch speeches from conferences, video-tutorial; skoken - B1 (pre-intermediate);
+                <span class="text_fw_bold">Английский</span> на уровне чтения документации, просмотра выступлений с
+                конференций, видео-уроков; разговорный - B1 (pre-intermediate);
               </span>
             </li>
           </ul>
         </div>
       </div>
       <div class="work main__experience">
-        <h2 class="section-title main__section-title">Work experience</h2>
+        <h2 class="section-title main__section-title">Опыт работы</h2>
         <br>
-        <span class="text"><span class="text_fw_bold">Aug</span> 2020 - ...</span>
-        <span class="text text_fw_bold">llc Intermobility</span>
-        <span class="text">Junior Front-End Developer</span>
+        <span class="text"><span class="text_fw_bold">авг</span> 2020 - ...</span>
+        <span class="text text_fw_bold">ООО "Интермобилити"</span>
+        <span class="text">Младший фронтэнд разработчик</span>
         <br>
         <span class="text">
-          Common tasks:
+          Общие задачи:
         </span>
         <ul class="work__projects-ul">
           <li class="skills__list-item">
-            <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.);</span>
+            <span class="text">разработка форм, разделов приложения, элементов UI (инпуты, кнопки и т.д.);</span>
           </li>
           <li class="skills__list-item">
-            <span class="text">code-review;</span>
+            <span class="text">код-ревью;</span>
           </li>
           <li class="skills__list-item">
-            <span class="text">bug fixes;</span>
+            <span class="text">исправление багов;</span>
           </li>
         </ul>
-        <span class="text text_fw_bold">Projects</span>
+        <span class="text text_fw_bold">Проекты</span>
         <div class="work__projects">
 
           <span class="text">
-            Platform (SPA made with <span class="text_fw_bold">React/Redux</span>) for creating mailings:
+            Платформа (SPA на <span class="text_fw_bold">React/Redux</span>) для формирования рассылок:
           </span>
           <ul class="work__projects-ul">
             <li class="skills__list-item">
-              <span class="text">line chart development using <span class="text_fw_bold">D3.js</span>;</span>
+              <span class="text">разработка графика на <span class="text_fw_bold">D3.js</span>;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">third party services integration using <span class="text_fw_bold">iframe</span>;</span>
+              <span class="text">интеграция сторонних сервисов с использованием <span class="text_fw_bold">iframe</span>;</span>
             </li>
             <li class="skills__list-item">
               <span class="text">
-                refactoring components and their testing via <span class="text_fw_bold">Enzyme</span> and <span
+                рефакторинг компонентов и их тестирование при помощи <span class="text_fw_bold">Enzyme</span> и <span
                   class="text_fw_bold">Jest</span> -
-                rewrote a lot of legacy components with UNSAFE methods to
-                functional components with writing tests first;
+                переписал большое количество легаси на <span class="text_fw_bold">React</span>'e с UNSAFE методами на
+                функциональные компоненты с предварительным написанием тестов;
               </span>
             </li>
             <li class="skills__list-item">
               <span class="text">
-                work in pair with a back-end developer;
+                работа в паре с бэкэндерами;
               </span>
             </li>
           </ul>
 
           <span class="text">
-            Administration panel using <span class="text_fw_bold">React-Admin</span>:
+            Разработка административной панели на <span class="text_fw_bold">React-Admin</span>:
           </span>
           <ul class="work__projects-ul">
             <li class="skills__list-item">
-              <span class="text">setting authorization flow up;</span>
+              <span class="text">настройка авторизации;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">custom table development: a user can adjust the table columns width, their order (via HTMP Drag'n'Drop API) and number; settings are stored at the user computer and restored after page refresh or revisiting a section with the table;</span>
+              <span class="text">разработка настраиваемых таблиц: пользователь может изменять ширину колонок, их порядок (Drag'n'Drop), количество; настройки сохранялись у клиента и восстаналивались при повторном заходе на страницу или в раздел с таблицей;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">linter set up and tidying up the file structure;</span>
+              <span class="text">настройка линтера и приведение кодовой базы и файловой структуры в порядок;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">participating in UI design improvements;</span>
+              <span class="text">участие в улучшении дизайна интерфейса;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">helping junior developer (I am the highest qualified Front-End developer on the project);</span>
+              <span class="text">помощь младшему разработчику;</span>
             </li>
           </ul>
         </div>
 
         <div class="projects main__projects">
-          <h2 class="section-title main__section-title">Pet projects</h2>
+          <h2 class="section-title main__section-title">Пет проекты</h2>
   
           <div class="projects__project-wrapper">
             <h3 id="trello-like" class="projects__title">Trello-like</h3>
-            <span class="projects__title-explanation"> - a Kanban board.</span>
+            <span class="projects__title-explanation"> - канбан доска.</span>
   
-            <span class="text text_mt_12">Web application, which replicates most functionality of Trello. Made with 
-              <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Implemented <span
-                class="text_fw_bold">Drag and Drop</span> funcionality without third party libraries or HTML Drag and Drop
+            <span class="text text_mt_12">Веб-приложение, которое повторяет большую часть функционала Trello. Написано на
+              <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Реализовал <span
+                class="text_fw_bold">Drag and Drop</span> функциональность без сторонних библиотек и HTML Drag and Drop
               API.</span>
   
             <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
@@ -245,16 +246,17 @@
   
           <div class="projects__project-wrapper">
             <h3 id="trello-like" class="projects__title">E-commerce</h3>
-            <span class="projects__title-explanation"> - online store.</span>
+            <span class="projects__title-explanation"> - интернет магазин.</span>
   
-            <span class="text text_mt_12">Study project in which I learned
-              <span class="text_fw_bold">TypeScript</span> and tried it out with с <span
-                class="text_fw_bold">React/Redux</span>. <span class="text_fw_bold">BEM</span> as a tyle methodology.
-              A small mobile phones e-store. Goods filter and simple form validation are implemented.
-              I used <span
-                class="text_fw_bold">react-hook-form</span> for forms.</span>
+            <span class="text text_mt_12">Учебный проект, в котором я изучал
+              <span class="text_fw_bold">TypeScript</span> и пробовал его использовать с <span
+                class="text_fw_bold">React/Redux</span>. Стилизацию делал по <span class="text_fw_bold">BEM</span>.
+              Небольшой интернет-магазин мобильных телефонов. Можно установить фильтр по товарам, есть простая валидация
+              формы.
+              Для функционирования формы использовал стороннюю библиотеку <span
+                class="text_fw_bold">react-hook-form</span>.</span>
   
-            <span class="text text_mt_12">Link - <a target="_blank"
+            <span class="text text_mt_12">Ссылка - <a target="_blank"
                 href="https://sv1nnet.github.io/e-commerce--react--typescript/"
                 class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>
   
@@ -265,13 +267,15 @@
           </div>
   
           <div class="projects__project-wrapper">
-            <h3 class="projects__title">Character accentuation test (in Russian)</h3>
-            <span class="projects__title-explanation"> – psychological questionnaire.</span>
+            <h3 class="projects__title">Тест личностных акцентуаций</h3>
+            <span class="projects__title-explanation"> – психологический опросник.</span>
   
-            <span class="text text_mt_12">My very first project. Psychological questionnaire for diagnosing temper and personality traits connected with it of teenagers and people 14-20 years old. I used <span class="text_fw_bold">HTML, SASS,
-                jQuery, Webpack</span> and "Double linked list" data structure.</span>
+            <span class="text text_mt_12">Мой самый первый проект. Психологический опросник для диагностики характера и сопряженных с ним
+              личностных
+              особенностей подростков и юношей в возрасте 14-20 лет. Использовал <span class="text_fw_bold">HTML, SASS,
+                jQuery, Webpack</span> и структуру данных “Двусвязный список”.</span>
   
-            <span class="text text_mt_12">Link (SSL cert. is expired) - <a target="_blank" href="https://accentuations-lychko.site"
+            <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://accentuations-lychko.site"
                 class="projects__link">https://accentuations-lychko.site</a></span>
   
             <span class="text text_mt_12">GitHub - <a target="_blank"
@@ -281,11 +285,11 @@
   
           <div class="projects__project-wrapper">
             <h3 class="projects__title">Landings</h3>
-            <span class="projects__title-explanation"> – landing HTML layouts.</span>
+            <span class="projects__title-explanation"> – сверстанные лендинги.</span>
   
-            <span class="text text_mt_12">It's made to represent my <span class="text_fw_bold">HTML/CSS</span>
-              skills. I used <span class="text_fw_bold">Webpack, BEM naming</span>
-              and
+            <span class="text text_mt_12">Сделаны для демонстрации моих <span class="text_fw_bold">HTML/CSS</span>
+              навыков. Использовал <span class="text_fw_bold">Webpack, BEM naming</span>
+              и
               <span class="text_fw_bold">jQuery</span>.</span>
   
             <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/html-css-layouts"
