--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <li class="nav__list-item">
           <div class="nav__list-item-divider"></div>
         </li>
-        <li class="nav__list-item"><a href="/ru.html"><span class="text">Ru</span></a></li>
+        <li class="nav__list-item"><a href="/Leonid-Tsukanov-cv/ru.html"><span class="text">Ru</span></a></li>
       </ul>
     </nav>
 
