--- a/src/ru.html
+++ b/src/ru.html
@@ -213,7 +213,7 @@
               <span class="text">настройка авторизации;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">разработка настраиваемых таблиц: пользователь может изменять ширину колонок, их порядок (Drag'n'Drop), количество; настройки сохранялись у клиента и восстаналивались при повторном заходе на страницу или в раздел с таблицей;</span>
+              <span class="text">разработка настраиваемых таблиц: пользователь может изменять ширину колонок, их порядок (Drag'n'Drop), количество; настройки сохранялись у клиента и восстанавливались при повторном заходе на страницу или в раздел с таблицей;</span>
             </li>
             <li class="skills__list-item">
               <span class="text">настройка линтера и приведение кодовой базы и файловой структуры в порядок;</span>
