--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,7 @@
   
             <span class="text text_mt_12">Study project in which I learned
               <span class="text_fw_bold">TypeScript</span> and tried it out with с <span
-                class="text_fw_bold">React/Redux</span>. <span class="text_fw_bold">BEM</span> as a tyle methodology.
+                class="text_fw_bold">React/Redux</span>. <span class="text_fw_bold">BEM</span> as a style methodology.
               A small mobile phones e-store. Goods filter and simple form validation are implemented.
               I used <span
                 class="text_fw_bold">react-hook-form</span> for forms.</span>
