--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,24 @@
   <div class="body__inner">
     <nav class="nav body__nav">
       <ul class="nav__ul">
-        <li class="nav__list-item"><span class="text">Eng</span></li>
+        <li class="nav__list-item">
+          <span class="text">Eng</span>
+        </li>
         <li class="nav__list-item">
           <div class="nav__list-item-divider"></div>
         </li>
-        <li class="nav__list-item"><a href="/Leonid-Tsukanov-cv/ru.html"><span class="text">Ru</span></a></li>
+        <li class="nav__list-item">
+          <a href="<%= htmlWebpackPlugin.options.langLink %>">
+            <span class="text">Ru</span>
+          </a>
+        </li>
       </ul>
     </nav>
 
     <header class="header body__header">
       <div class="header__author">
         <h1 class="header__full-name">Leonid Tsukanov</h1>
-        <p class="text_ff_open-sans header__profession">Front-End Developer (Junior+ / Junior-to-Middle)</p>
+        <p class="text_ff_open-sans header__profession">Front-End Developer</p>
         <a target="_blank" href="https://github.com/Sv1nnet" class="contact-link">https://github.com/Sv1nnet</a>
       </div>
 
@@ -112,6 +118,11 @@
             <span class="text">Know poorly/rarely used:</span>
             <li class="skills__list-item">
               <span class="text">
+                <span class="text_fw_bold">Vue.js</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
                 <span class="text_fw_bold">Git</span> - usually, I use "checkout", "commit", "add" and other commonly used commands;
               </span>
             </li>
@@ -149,7 +160,7 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">English</span> - can read/write documentaion, watch speeches from conferences, video-tutorial; skoken - B1 (pre-intermediate);
+                <span class="text_fw_bold">English</span> - can read/write documentaion, watch speeches from conferences, video-tutorials; skoken - pre-intermediate;
               </span>
             </li>
           </ul>
@@ -205,7 +216,7 @@
           </ul>
 
           <span class="text">
-            Administration panel using <span class="text_fw_bold">React-Admin</span>:
+            Administration panels using <span class="text_fw_bold">React</span>(mostly) and <span class="text_fw_bold">Vue</span>:
           </span>
           <ul class="work__projects-ul">
             <li class="skills__list-item">
@@ -213,6 +224,9 @@
             </li>
             <li class="skills__list-item">
               <span class="text">custom table development: a user can adjust the table columns width, their order (via HTMP Drag'n'Drop API) and number; settings are stored at the user computer and restored after page refresh or revisiting a section with the table;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">development of highly flexible filters with url parameters synchronization for tables;</span>
             </li>
             <li class="skills__list-item">
               <span class="text">linter set up and tidying up the file structure;</span>
