--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,11 @@
             <span class="text">Know poorly/rarely used:</span>
             <li class="skills__list-item">
               <span class="text">
+                <span class="text_fw_bold">React Testing Library</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
                 <span class="text_fw_bold">Vue.js</span>;
               </span>
             </li>
@@ -160,7 +165,7 @@
             </li>
             <li class="skills__list-item">
               <span class="text">
-                <span class="text_fw_bold">English</span> - can read/write documentaion, watch speeches from conferences, video-tutorials; skoken - pre-intermediate;
+                <span class="text_fw_bold">English</span> - can read/write documentation, watch speeches from conferences, video-tutorials; spoken - pre-intermediate;
               </span>
             </li>
           </ul>
@@ -171,14 +176,17 @@
         <br>
         <span class="text"><span class="text_fw_bold">Aug</span> 2020 - ...</span>
         <span class="text text_fw_bold">llc Intermobility</span>
-        <span class="text">Junior Front-End Developer</span>
+        <span class="text">Front-End Developer</span>
         <br>
         <span class="text">
           Common tasks:
         </span>
         <ul class="work__projects-ul">
           <li class="skills__list-item">
-            <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.);</span>
+            <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.) and writing README to them;</span>
+          </li>
+          <li class="skills__list-item">
+            <span class="text">taking a part in daily meetings, retros, planning;</span>
           </li>
           <li class="skills__list-item">
             <span class="text">code-review;</span>
@@ -189,7 +197,6 @@
         </ul>
         <span class="text text_fw_bold">Projects</span>
         <div class="work__projects">
-
           <span class="text">
             Platform (SPA made with <span class="text_fw_bold">React/Redux</span>) for creating mailings:
           </span>
@@ -235,7 +242,10 @@
               <span class="text">participating in UI design improvements;</span>
             </li>
             <li class="skills__list-item">
-              <span class="text">helping junior developer (I am the highest qualified Front-End developer on the project);</span>
+              <span class="text">setting Storybook up;</span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">helping junior developer;</span>
             </li>
           </ul>
         </div>
@@ -249,7 +259,7 @@
   
             <span class="text text_mt_12">Web application, which replicates most functionality of Trello. Made with 
               <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Implemented <span
-                class="text_fw_bold">Drag and Drop</span> funcionality without third party libraries or HTML Drag and Drop
+                class="text_fw_bold">Drag and Drop</span> functionality without third party libraries or HTML Drag and Drop
               API.</span>
   
             <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
@@ -276,34 +286,6 @@
                 href="https://github.com/Sv1nnet/e-commerce--react--typescript"
                 class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
   
-          </div>
-  
-          <div class="projects__project-wrapper">
-            <h3 class="projects__title">Character accentuation test (in Russian)</h3>
-            <span class="projects__title-explanation"> – psychological questionnaire.</span>
-  
-            <span class="text text_mt_12">My very first project. Psychological questionnaire for diagnosing temper and personality traits connected with it of teenagers and people 14-20 years old. I used <span class="text_fw_bold">HTML, SASS,
-                jQuery, Webpack</span> and "Double linked list" data structure.</span>
-  
-            <span class="text text_mt_12">Link (SSL cert. is expired) - <a target="_blank" href="https://accentuations-lychko.site"
-                class="projects__link">https://accentuations-lychko.site</a></span>
-  
-            <span class="text text_mt_12">GitHub - <a target="_blank"
-                href="https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko"
-                class="projects__link">https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko</a></span>
-          </div>
-  
-          <div class="projects__project-wrapper">
-            <h3 class="projects__title">Landings</h3>
-            <span class="projects__title-explanation"> – landing HTML layouts.</span>
-  
-            <span class="text text_mt_12">It's made to represent my <span class="text_fw_bold">HTML/CSS</span>
-              skills. I used <span class="text_fw_bold">Webpack, BEM naming</span>
-              and
-              <span class="text_fw_bold">jQuery</span>.</span>
-  
-            <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/html-css-layouts"
-                class="projects__link">https://github.com/Sv1nnet/html-css-layouts</a></span>
           </div>
         </div>
       </div>
