--- a/src/ru.html
+++ b/src/ru.html
@@ -118,6 +118,11 @@
             <span class="text">Знаю поверхностно/редко использовал:</span>
             <li class="skills__list-item">
               <span class="text">
+                <span class="text_fw_bold">React Testing Library</span>;
+              </span>
+            </li>
+            <li class="skills__list-item">
+              <span class="text">
                 <span class="text_fw_bold">Vue.js</span>;
               </span>
             </li>
@@ -172,14 +177,17 @@
         <br>
         <span class="text"><span class="text_fw_bold">авг</span> 2020 - ...</span>
         <span class="text text_fw_bold">ООО "Интермобилити"</span>
-        <span class="text">Младший фронтэнд разработчик</span>
+        <span class="text">Фронтэнд разработчик</span>
         <br>
         <span class="text">
           Общие задачи:
         </span>
         <ul class="work__projects-ul">
           <li class="skills__list-item">
-            <span class="text">разработка форм, разделов приложения, элементов UI (инпуты, кнопки и т.д.);</span>
+            <span class="text">разработка форм, разделов приложения, элементов UI (инпуты, кнопки и т.д.) и написание README к ним;</span>
+          </li>
+          <li class="skills__list-item">
+            <span class="text">участие в дейли, ретро, планировании;</span>
           </li>
           <li class="skills__list-item">
             <span class="text">код-ревью;</span>
@@ -236,6 +244,9 @@
               <span class="text">участие в улучшении дизайна интерфейса;</span>
             </li>
             <li class="skills__list-item">
+              <span class="text">настойка Storybook;</span>
+            </li>
+            <li class="skills__list-item">
               <span class="text">помощь младшему разработчику;</span>
             </li>
           </ul>
@@ -281,37 +292,6 @@
             <span class="text text_mt_12">GitHub - <a target="_blank"
                 href="https://github.com/Sv1nnet/e-commerce--react--typescript"
                 class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
-  
-          </div>
-  
-          <div class="projects__project-wrapper">
-            <h3 class="projects__title">Тест личностных акцентуаций</h3>
-            <span class="projects__title-explanation"> – психологический опросник.</span>
-  
-            <span class="text text_mt_12">Мой самый первый проект. Психологический опросник для диагностики характера и сопряженных с ним
-              личностных
-              особенностей подростков и юношей в возрасте 14-20 лет. Использовал <span class="text_fw_bold">HTML, SASS,
-                jQuery, Webpack</span> и структуру данных “Двусвязный список”.</span>
-  
-            <span class="text text_mt_12">Ссылка - <a target="_blank" href="https://accentuations-lychko.site"
-                class="projects__link">https://accentuations-lychko.site</a></span>
-  
-            <span class="text text_mt_12">GitHub - <a target="_blank"
-                href="https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko"
-                class="projects__link">https://github.com/Sv1nnet/test-accentuaciy-lichko-dvorshenko</a></span>
-          </div>
-  
-          <div class="projects__project-wrapper">
-            <h3 class="projects__title">Landings</h3>
-            <span class="projects__title-explanation"> – сверстанные лендинги.</span>
-  
-            <span class="text text_mt_12">Сделаны для демонстрации моих <span class="text_fw_bold">HTML/CSS</span>
-              навыков. Использовал <span class="text_fw_bold">Webpack, BEM naming</span>
-              и
-              <span class="text_fw_bold">jQuery</span>.</span>
-  
-            <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/html-css-layouts"
-                class="projects__link">https://github.com/Sv1nnet/html-css-layouts</a></span>
           </div>
         </div>
       </div>
