Workout tracker added;

--- a/src/ru.html
+++ b/src/ru.html
@@ -270,10 +270,26 @@
           <h2 class="section-title main__section-title">Пет проекты</h2>
 
           <div class="projects__project-wrapper">
+            <h3 id="trello-like" class="projects__title">My Simple Workout Tracker</h3>
+            <span class="projects__title-explanation"> - личный трекер тренировок.</span>
+
+            <span class="text text_mt_8">Ориентированное на использование на смартфонах веб-приложение на базе
+              <span class="text_fw_bold">NextJS, NodeJS(Express), MongoDB</span>. Разработка для собственных нужд, т.к.
+              не нашел ничего подходящего в Play Store. Можно создавать упражнения, составлять тренировки, отслеживать
+              прогресс. Разработка еще в процессе, однако большинство функционала уже реализована. В будущем планирую
+              перевести на <span class="text_fw_bold">React Native</span>.</span>
+
+            <span class="text text_mt_8">GitHub - <a target="_blank"
+                href="https://github.com/Sv1nnet/my-simple-workout-tracker"
+                class="projects__link">https://github.com/Sv1nnet/my-simple-workout-tracker</a></span>
+
+          </div>
+
+          <div class="projects__project-wrapper">
             <h3 id="trello-like" class="projects__title">Trello-like</h3>
             <span class="projects__title-explanation"> - канбан доска.</span>
 
-            <span class="text text_mt_8">Веб-приложение, которое повторяет большую часть функционала Trello. Написано
+            <span class="text text_mt_8">Мое первое веб-приложение. Повторяет большую часть функционала Trello. Написано
               на
               <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Реализовал <span
                 class="text_fw_bold">Drag and Drop</span> функциональность без сторонних библиотек и HTML Drag and Drop
