--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,8 @@
             </li>
             <li class="ul__list-item">
               <span class="text">
-                <span class="text_fw_bold">Git</span> - usually, I use "checkout", "commit", "add" and other commonly used commands;
+                <span class="text_fw_bold">Git</span> - usually, I use "checkout", "commit", "add" and other commonly
+                used commands;
               </span>
             </li>
             <li class="ul__list-item">
@@ -169,7 +170,8 @@
             </li>
             <li class="ul__list-item">
               <span class="text">
-                <span class="text_fw_bold">English</span> - can read/write documentation, watch speeches from conferences, video-tutorials; spoken - pre-intermediate/intermediate;
+                <span class="text_fw_bold">English</span> - can read/write documentation, watch speeches from
+                conferences, video-tutorials; spoken - pre-intermediate/intermediate;
               </span>
             </li>
           </ul>
@@ -187,7 +189,8 @@
         </span>
         <ul class="work__projects-ul ul">
           <li class="ul__list-item">
-            <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.) and writing README to them;</span>
+            <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.) and writing README
+              to them;</span>
           </li>
           <li class="ul__list-item">
             <span class="text">taking a part in daily meetings, retros, planning;</span>
@@ -225,20 +228,25 @@
           </ul>
 
           <span class="text">
-            Administration panels using <span class="text_fw_bold">React</span>(mostly) and <span class="text_fw_bold">Vue</span>:
+            Administration panels using <span class="text_fw_bold">React</span>(mostly) and <span
+              class="text_fw_bold">Vue</span>:
           </span>
           <ul class="work__projects-ul">
             <li class="ul__list-item">
               <span class="text">setting authorization flow up;</span>
             </li>
             <li class="ul__list-item">
-              <span class="text">custom table development: a user can adjust the table columns width, their order <span class="text_fw_bold">(via HTMP Drag'n'Drop API)</span> and number; settings are stored at the user computer and restored after page refresh or revisiting a section with the table;</span>
+              <span class="text">custom table development: a user can adjust the table columns width, their order <span
+                  class="text_fw_bold">(via HTMP Drag'n'Drop API)</span> and number; settings are stored at the user
+                computer and restored after page refresh or revisiting a section with the table;</span>
             </li>
             <li class="ul__list-item">
-              <span class="text">development of highly flexible filters with url parameters synchronization for tables;</span>
+              <span class="text">development of highly flexible filters with url parameters synchronization for
+                tables;</span>
             </li>
             <li class="ul__list-item">
-              <span class="text">work with <span class="text_fw_bold">2Gis</span> and <span class="text_fw_bold">Yandex</span> maps;</span>
+              <span class="text">work with <span class="text_fw_bold">2Gis</span> and <span
+                  class="text_fw_bold">Yandex</span> maps;</span>
             </li>
             <li class="ul__list-item">
               <span class="text">linter set up and tidying up the file structure;</span>
@@ -257,40 +265,56 @@
 
         <div class="projects main__projects">
           <h2 class="section-title main__section-title">Pet projects</h2>
-  
+
+          <div class="projects__project-wrapper">
+            <h3 id="trello-like" class="projects__title">My Simple Workout Tracker</h3>
+            <span class="projects__title-explanation"> - a personal workout tracker.</span>
+
+            <span class="text text_mt_8">Web-application oriented on usage on smartphones. Developed with
+              <span class="text_fw_bold">NextJS, NodeJS(Express), MongoDB</span>. The app for my own purposes since I
+              didn't find any suitable one on Play Store. You can create exercises, compose workouts, track progress.
+              Development in progress but most of functionality is already implemented. In future I want to migrate it
+              to <span class="text_fw_bold">React Native</span>.</span>
+
+            <span class="text text_mt_8">GitHub - <a target="_blank"
+                href="https://github.com/Sv1nnet/my-simple-workout-tracker"
+                class="projects__link">https://github.com/Sv1nnet/my-simple-workout-tracker</a></span>
+
+          </div>
+
           <div class="projects__project-wrapper">
             <h3 id="trello-like" class="projects__title">Trello-like</h3>
             <span class="projects__title-explanation"> - a Kanban board.</span>
-  
-            <span class="text text_mt_8">Web application, which replicates most functionality of Trello. Made with 
+
+            <span class="text text_mt_8">My first web application. Replicates most functionality of Trello. Made with
               <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Implemented <span
-                class="text_fw_bold">Drag and Drop</span> functionality without third party libraries or HTML Drag and Drop
+                class="text_fw_bold">Drag and Drop</span> functionality without third party libraries or HTML Drag and
+              Drop
               API.</span>
-  
+
             <span class="text text_mt_8">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
                 class="projects__link">https://github.com/Sv1nnet/trello-react-app</a></span>
-  
+
           </div>
-  
+
           <div class="projects__project-wrapper">
             <h3 id="trello-like" class="projects__title">E-commerce</h3>
             <span class="projects__title-explanation"> - online store.</span>
-  
+
             <span class="text text_mt_8">Study project in which I learned
               <span class="text_fw_bold">TypeScript</span> and tried it out with с <span
                 class="text_fw_bold">React/Redux</span>. <span class="text_fw_bold">BEM</span> as a style methodology.
               A small mobile phones e-store. Goods filter and simple form validation are implemented.
-              I used <span
-                class="text_fw_bold">react-hook-form</span> for forms.</span>
-  
+              I used <span class="text_fw_bold">react-hook-form</span> for forms.</span>
+
             <span class="text text_mt_8">Link - <a target="_blank"
                 href="https://sv1nnet.github.io/e-commerce--react--typescript/"
                 class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>
-  
+
             <span class="text text_mt_8">GitHub - <a target="_blank"
                 href="https://github.com/Sv1nnet/e-commerce--react--typescript"
                 class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
-  
+
           </div>
 
         </div>
@@ -305,19 +329,24 @@
 
         <span class="text text_mt_12">My journey into development consisted of the following steps:</span>
         <ul class="ul about__ul">
-          <li class="ul__list-item"><span class="text">2017 - started with learning free materials on the Internet and reading books about <span
-              class="text_fw_bold">JS</span>;</span></li>
-          <li class="ul__list-item"><span class="text">half a year later made a landing page for my brother's business;</span></li>
-          <li class="ul__list-item"><span class="text">a year later finished and published my first pet-project - psychological questionnaire (MPDQ) by Lychko;</span></li>
-          <li class="ul__list-item"><span class="text">a year and half later finished pretty big pet-project <span class="text_fw_bold">Trello-like,</span>
-            that I developed for my portfolio and to study <span class="text_fw_bold">MERN</span> stack;</span></li>
-          <li class="ul__list-item"><span class="text">in two years I got my first job as a Front-end developer after completing test task for a
-            <span class="text_fw_bold">Middle</span> position;</span></li>
+          <li class="ul__list-item"><span class="text">2017 - started with learning free materials on the Internet and
+              reading books about <span class="text_fw_bold">JS</span>;</span></li>
+          <li class="ul__list-item"><span class="text">half a year later made a landing page for my brother's
+              business;</span></li>
+          <li class="ul__list-item"><span class="text">a year later finished and published my first pet-project -
+              psychological questionnaire (MPDQ) by Lychko;</span></li>
+          <li class="ul__list-item"><span class="text">a year and half later finished pretty big pet-project <span
+                class="text_fw_bold">Trello-like,</span>
+              that I developed for my portfolio and to study <span class="text_fw_bold">MERN</span> stack;</span></li>
+          <li class="ul__list-item"><span class="text">in two years I got my first job as a Front-end developer after
+              completing test task for a
+              <span class="text_fw_bold">Middle</span> position;</span></li>
         </ul>
 
         <p class="text text_mt_12">
           In my spare time I study English, different technologies and tools, improving CS.
-          Development to me isn't just a work, it's also a hobby, so I like spending time working on pet-projects and helping friends to learn programming.
+          Development to me isn't just a work, it's also a hobby, so I like spending time working on pet-projects and
+          helping friends to learn programming.
         </p>
       </div>
     </main>
